--- a/views/user/list.html
+++ b/views/user/list.html
@@ -1,1 +1,42 @@
-user list
+<h2>User List</h2>
+<md-item ng-repeat="user in users" class="item"
+         ng-class="{ 'selected-item': $index == selectedUserIndex}">
+    <md-item-content class="user tile md-whiteframe-z1"
+                     ng-class="{ 'selected md-whiteframe-z2': $index == selectedUserIndex}"
+                     layout="column">
+        <div layout="row" ng-click="selectUserIndex($index)" class="folded">
+            <div class="md-tile-left">
+                <img ng-src="{{ user.face }}" class="face">
+            </div>
+            <div class="md-tile-content" layout="column" layout-align="center start">
+                <h3>{{ user.name.first + " " + user.name.last }}</h3>
+                <p ng-hide="$index == selectedUserIndex">
+                    <span>{{ user.job }}</span>
+                </p>
+            </div>
+        </div>
+        <md-divider  ng-show="$index == selectedUserIndex"></md-divider>
+        <div layout="column" layout-padding class="expanded">
+            <md-content layout-gt-sm="row" layout-padding>
+                <form name="projectForm">
+                    <md-input-container>
+                        <label>First Name</label>
+                        <input ng-model="user.name.first">
+                    </md-input-container>
+
+                    <md-input-container>
+                        <label>Last Name</label>
+                        <input ng-model="user.name.last" type="text">
+                    </md-input-container>
+
+                    <md-input-container class="md-block">
+                        <label>Bio</label>
+                        <input md-maxlength="30" required md-no-asterisk name="description" ng-model="user.bio">
+                    </md-input-container>
+                    <md-button type="submit" class="md-raised md-primary">Save Changes</md-button>
+                </form>
+            </md-content>
+        </div>
+    </md-item-content>
+    <md-divider class="divider-inset" ng-if="!$last"></md-divider>
+</md-item>
