--- a/styles/expanded-card.css
+++ b/styles/expanded-card.css
@@ -1,4 +1,5 @@
 /*thanks to : http://embed.plnkr.co/NMvyXBL3FYf2b2XsAlz9*/
+
 .selected-item ~ .item .user,
 .item:first-child .user {
     border-top-left-radius: 2px;
@@ -68,3 +69,5 @@
     height: 48px;
     margin: 16px;
 }
+
+.folded:focus {outline:0;}
